<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Sun Now</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="force_reload">Force reload</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="aboutCredits"><![CDATA[
        <p>Images and descriptions are courtesy of NASA/SDO and the AIA, EVE, and HMI science teams.</p>
        <p>Solar Weather Data is provided by <a href="http://www.swpc.noaa.gov/">NOAA Space Weather Prediction Center</a></p>
        <p>
        Many thanks to these open source projects:<br>
        &bull; <b><a href="http://square.github.io/okhttp/">OkHttp</a></b> by Square<br/>
        &bull; <b><a href="http://square.github.io/picasso/">Picasso</a></b> by Square<br/>
        &bull; <b><a href="https://github.com/sephiroth74/ImageViewZoom">ImageViewZoom</a></b> by sephiroth74<br/>
        &bull; <b><a href="https://jsoup.org/">jsoup</a></b> by Jonathan Hedley<br/>
        &bull; <b><a href="http://muzei.co">Muzei</a></b> by Roman Nurik and Ian Lake
        </p>
        <p>
        Made in Italy by <a href="http://www.flatworld.eu">Flatworld</a><br><br>
        </p>
    ]]></string>
    <string name="about_this_image">About this image</string>
    <string name="sdo_website"><![CDATA[
        NASA / SDO Mission<br/>
        <a href="https://sdo.gsfc.nasa.gov">sdo.gsfc.nasa.gov</a>
        ]]></string>
    <string name="flatworld_website"><![CDATA[
        ###APPNAME###<br/>###VERSION###
        ]]></string>
    <string name="do_you_want_to_set">Do you want to set the wallapper to the current image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="general">General</string>
    <string name="preferences_resolution_title">Full size image resolution</string>
    <string name="settings">Settings</string>
    <string name="reload">Reload</string>
    <string name="share_the_image_using_">Share the image using:</string>
    <string name="error_sharing_the_image_">"Error sharing image: "</string>
    <string name="wallpaper_is_set">Wallpaper is set</string>
    <string name="error_setting_the_wallpaper_">"Error setting the wallpaper: "</string>
    <string name="setting_wallpaper_">Setting wallpaper...</string>
    <string name="preparing_the_image_">Preparing the image...</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="the_sun_now">The Sun Now</string>
    <string name="browse_data">Browse Data</string>
    <string name="select_year">Select year</string>
    <string name="select_month">Select month</string>
    <string name="loading_hours">Loading hours...</string>
    <string name="loading_images">Loading images...</string>
    <string name="loading_days">Loading days...</string>
    <string name="loading_months">Loading months...</string>
    <string name="loading_years">Loading years...</string>
    <string name="error_getting_data">Error getting data</string>
    <string name="select_hour">Select hour</string>
    <string name="select_image">Select image</string>
    <string name="select_day">Select day</string>
    <string name="timeout">timeout</string>
    <string name="loading___">Loading...</string>

    <string name="muzei_label">The Sun Now</string>
    <string name="muzei_description">Images from the NASA Solar Dynamics Observatory</string>
    <string name="muzei_byline">Courtesy of NASA/SDO and the AIA, EVE, and HMI science teams</string>
    <string name="muzei_settings_15_minutes">Every 15 minutes</string>
    <string name="muzei_settings_30_minutes">Every 30 minutes</string>
    <string name="muzei_settings_1_hour">Every hour</string>
    <string name="muzei_settings_2_hour">Every 2 hours</string>
    <string name="muzei_settings_3_hour">Every 3 hours</string>
    <string name="muzei_settings_4_hour">Every 4 hours</string>
    <string name="muzei_settings_6_hour">Every 6 hours</string>
    <string name="muzei_settings_8_hour">Every 8 hours</string>
    <string name="muzei_settings_12_hour">Every 12 hours</string>
    <string name="muzei_settings_24_hour">Every 24 hours</string>
    <string name="muzei_update_interval_title">Update interval</string>
    <string name="muzei_network_mode_title">Allowed network mode when updating</string>
    <string name="muzei_resolution_title">Image resolution</string>
    <string name="muzei_settings">The Sun Now Settings</string>
    <string name="muzei_settings_main_app">Muzei Settings</string>
    <string name="speed_">Speed:</string>
    <string name="magnetic_fields_">Magnetic Fields:</string>
    <string name="radio_flux_">Radio Flux:</string>
    <string name="solar_wind">Solar Wind</string>
    <string name="speed_value_error">--- Km/s</string>
    <string name="t_magneticfield_value_error">Bt --- nT</string>
    <string name="z_magneticfield_value_error">Bz --- nT</string>
    <string name="flux_value_error">--- sfu</string>
    <string name="speed_value_format">%d Km/s</string>
    <string name="t_magneticfield_value_format">Bt %d nT</string>
    <string name="z_magneticfield_value_format">Bz %d nT</string>
    <string name="flux_value_format">%d sfu</string>
    <string name="no_data">No data</string>

</resources>
