<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="60"
        android:entries="@array/updateIntervals"
        android:entryValues="@array/updateIntervalsValues"
        android:key="muzeiUpdateInterval"
        android:summary=""
        android:title="@string/muzei_update_interval_title" />
    <ListPreference
        android:defaultValue="WIFI_MOBILE"
        android:entries="@array/networkModes"
        android:entryValues="@array/networkModesValues"
        android:key="muzeiNetworkMode"
        android:summary=""
        android:title="@string/muzei_network_mode_title" />
    <ListPreference
        android:defaultValue="2048"
        android:entries="@array/resolutions"
        android:entryValues="@array/resolutionsValues"
        android:key="resolution"
        android:summary=""
        android:title="@string/muzei_resolution_title" />
</PreferenceScreen>