<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_pfss"
        android:checkable="true"
        android:icon="@drawable/ic_action_pfss_off"
        android:title="Shof PFSS"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about_this_image"
        android:icon="@drawable/ic_action_action_info_outline"
        android:title="@string/about_this_image"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_social_share"
        app:showAsAction="ifRoom"
        android:title="Share" />
    <item
        android:id="@+id/action_set_wallpaper"
        android:title="@string/set_wallpaper"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_action_navigation_refresh"
        android:title="@string/reload"
        app:showAsAction="ifRoom" />
</menu>